--- a/README
+++ b/README
@@ -6,3 +6,8 @@ architecture-detecting #ifdefs.  I haven't tested it beyond using it
 to build h5py and testing its builtin tests on each architecture, and
 then using it to run the CellProfiler unit tests, many of which rely
 on h5py.
+
+To use this script, downlaod the hdf5-1.8.7.tar.bz2 file, then run
+  % python build.py
+
+It will install in /usr/local/HDF5-universal.
